[gd_scene load_steps=4 format=2]

[ext_resource path="res://colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://objects/ball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="ball" type="RigidBody2D"]
z_index = 1
contacts_reported = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 133

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="arrow1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 1036

[node name="arrow2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 1036

[node name="arrow3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 1036
